--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.address=0.0.0.0
 server.port=8085
 
 # === Resource Server (Validación JWT emitidos por Keycloak) ===
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://192.168.213.191:8081/realms/modulos
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://192.168.192.102:8081/realms/modulos
 
 
 # Configuración de Keycloak
@@ -10,21 +10,17 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=http://192.168.213.191:8081
 spring.security.oauth2.client.registration.keycloak.client-id=JAVA-modulo4
 spring.security.oauth2.client.registration.keycloak.client-secret=SECRET
 spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
-
+spring.security.oauth2.client.registration.keycloak.redirect-uri=http://192.168.1.7:8085/login/oauth2/code/keycloak
 spring.security.oauth2.client.registration.keycloak.scope=openid,profile,email
 
 
-spring.security.oauth2.client.registration.keycloak.redirect-uri=http://192.168.213.191:8085/login/oauth2/code/keycloak
-
-
-
-spring.security.oauth2.client.provider.keycloak.issuer-uri=http://192.168.213.191:8081/realms/modulos
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://192.168.1.7:8085/realms/modulos
 
 spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
 
-keycloak.server-url=http://192.168.213.191:8081
+keycloak.server-url=http://192.168.192.102:8081
 keycloak.realm=modulos
-keycloak.token.client-id=JAVA-modulo4
+keycloak.token.client-id=java-module4
 keycloak.token.client-secret=MI_SECRETO_OPCIONAL 
 keycloak.admin.client-id=admin-cli
 keycloak.admin.username=admin
